--- a/code.html
+++ b/code.html
@@ -1,42 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Real-Time Chat</title>
-  <style>
-    body { font-family: Arial; padding: 20px; }
-    #chat { border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: scroll; }
-    #message { width: 80%; }
-    #send { width: 15%; }
-  </style>
+  <meta charset="UTF-8" />
+  <title>Chat App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Real-Time Chat App</h2>
-  <div id="chat"></div>
-  <input id="message" type="text" placeholder="Type a message..." />
-  <button id="send">Send</button>
+  <div id="login-screen">
+    <h2>Enter Username</h2>
+    <input id="username" placeholder="Your name" />
+    <button onclick="login()">Join Chat</button>
+  </div>
+
+  <div id="chat-screen" style="display: none;">
+    <h2>Chat Room</h2>
+    <div id="chat-box"></div>
+    <input id="message" placeholder="Type a message" />
+    <button onclick="sendMessage()">Send</button>
+  </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-    const chat = document.getElementById('chat');
-    const messageInput = document.getElementById('message');
-    const sendButton = document.getElementById('send');
-
-    sendButton.onclick = () => {
-      const message = messageInput.value;
-      if (message.trim() !== '') {
-        socket.emit('chat message', message);
-        messageInput.value = '';
-      }
-    };
-
-    socket.on('chat message', (msg) => {
-      const msgElem = document.createElement('div');
-      msgElem.textContent = msg;
-      chat.appendChild(msgElem);
-      chat.scrollTop = chat.scrollHeight;
-    });
-  </script>
+  <script src="chat.js"></script>
 </body>
 </html>
